[gd_scene load_steps=3 format=3 uid="uid://bc0cgixhyscrn"]

[ext_resource type="Script" path="res://high_scores.gd" id="1_bl0wr"]

[sub_resource type="ViewportTexture" id="ViewportTexture_5ljes"]

[node name="high_scores" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_bl0wr")

[node name="Button" type="Button" parent="."]
layout_mode = 0
offset_left = 70.0
offset_top = 443.0
offset_right = 516.0
offset_bottom = 597.0
text = "Add score"
icon = SubResource("ViewportTexture_5ljes")

[node name="LineEdit" type="LineEdit" parent="."]
layout_mode = 0
offset_left = 60.0
offset_top = 309.0
offset_right = 550.0
offset_bottom = 415.0

[node name="LineEdit2" type="LineEdit" parent="."]
layout_mode = 0
offset_left = 602.0
offset_top = 312.0
offset_right = 1092.0
offset_bottom = 418.0

[node name="ItemList" type="ItemList" parent="."]
layout_mode = 0
offset_left = 18.0
offset_top = 26.0
offset_right = 643.0
offset_bottom = 288.0

[node name="sub_score" type="Button" parent="."]
layout_mode = 0
offset_left = 575.0
offset_top = 459.0
offset_right = 1069.0
offset_bottom = 591.0
text = "remove score #"

[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="sub_score" to="." method="_on_sub_score_pressed"]
